Updated instructions for IntelliJ